# Mathematics_Physics_Lectures

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  rerun_all.sh
Lecture_Notes/Discrete_Mathematics/: Discrete_Mathematics.qmd  Lecture_Notes.qmd  lecture_plan.md
Lecture_Notes/Mathematics/: Analytic_Geometry.qmd  Calculus.qmd  Linear_Algebra.qmd
Lecture_Notes/Physics/: Circuits.html  Circuits.qmd  Cosmology.html  Cosmology.qmd  Cuircuits-2.qmd  Electromagnetism.html  Electromagnetism.qmd  Language_of_physics.html  Language_of_physics.qmd  Measurement.html  Measurement.qmd  Mechanics.html  Mechanics.qmd  Quantum_mechanics.html  Quantum_mechanics.qmd  Statistics.html  Statistics.qmd  Waves.qmd  custom.scss
Lecture_Notes/Physics/py_src/: wave_gif.py
docs/: extra.css  index.md
docs/Discrete_Mathematics/: 1_Set_theory_and_.md  2_Number_theory_and_.md  3_Recurrence_and_.md  4_Graph_theory_and_.md  5_Logic_and.md  Exercises.md
docs/Discrete_Mathematics/src/: gen_graph.py
docs/Mathematics/: Exercises.md
docs/Physics/Electromagnetism/: Circuits.html  Electromagnetism.html
docs/Physics/Electromagnetism/sp/: Kirchhoff_laws.md  solar_wind.md
docs/Physics/Exercises_for_Students/: What_to_deliver.md  exercises.md  exercises_dch.md
docs/Physics/Experiments_Statistics/: Measurement.html  Statistics.html
docs/Physics/Mechanics/: Language_of_physics.html  Mechanics.html  Waves.html  wave_example.html
docs/Physics/Modern_Physics/: Cosmology.html  Quantum_mechanics.html
sandbox/: Lecture_plan.md  wave.ipynb
sandbox/JS_test/: simple_script.js
(+12 files in other folders)
