[tool.poetry]
name = "physics-2024-25-summer"
version = "0.1.0"
description = ""
authors = ["dchorazkiewicz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
jupyter = "^1.1.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.48"
mkdocs-macros-plugin = "^1.3.7"
pymdown-extensions = "^10.12"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-mermaid2-plugin = "^1.2.1"
scipy = "^1.14.1"
schemdraw = "^0.19"
plotly = "^5.24.1"
imageio = "^2.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
